# advent_of_code_solutions

./: .gitignore  Cargo.toml
2016_solutions/rust/src/: day1.rs  utils.rs
2019_solutions/rust/: README.md
2019_solutions/rust/data/: Day22.txt  Day3.txt  Day6.txt
2019_solutions/rust/src/: cartesian.rs  day1.rs  day12.rs  day2.rs  day22.rs  day24.rs  day3.rs  day5.rs  day7.rs  math.rs
2020_solutions/cplusplus/: .gitignore  CMakeLists.txt  conanfile.txt
2020_solutions/cplusplus/main/: CMakeLists.txt  day1.cpp  day12.cpp  day14.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day5.cpp  day8.cpp  day9.cpp  utils.cpp
2020_solutions/cplusplus/main/includes/: algorithm.hpp  day1.hpp  day12.hpp  day14.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day2.hpp  day22.hpp  day23.hpp  day24.hpp  day25.hpp  day5.hpp  day8.hpp  day9.hpp  utils.hpp
2020_solutions/cplusplus/test/: CMakeLists.txt  algorithmtest.cpp  day12test.cpp  day14test.cpp  day16test.cpp  day17test.cpp  day18test.cpp  day19test.cpp  day1test.cpp  day22test.cpp  day23test.cpp  day24test.cpp  day25test.cpp  day2test.cpp  day5test.cpp  day8test.cpp  day9test.cpp  utilstest.cpp
2020_solutions/data/: Day1.txt  Day12.txt  Day14.txt  Day24.txt  Day5.txt  Day6.txt  Day8.txt
2020_solutions/rust/: Cargo.toml
2020_solutions/rust/src/: day1.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day9.rs  lib.rs  utils.rs
2022_solutions/csharp/AdventOfCode2022/: AdventOfCode2022.sln
2022_solutions/data/: Day21.txt
2022_solutions/rust/: Cargo.toml
2022_solutions/rust/src/: cartesian.rs  day1.rs  day10.rs  day11.rs  day12.rs  (+22 more)
2022_solutions/typescript/: babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
2023_solutions/csharp/: csharp.sln
2023_solutions/data/: Day10.txt  Day11.txt  Day13.txt  Day15.txt  Day9.txt
2024_solutions/data/: Day7.txt
2025_solutions/rust/: Cargo.toml
data/: Day8.txt
src/: cartesian.rs  day12.rs  day16.rs  day2.rs  day22.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  template.rs  utils.rs
(+91 files in other folders)
